# PMPP

./: 10_3_simple_reduction_kernel.cu  10_7_shared_mem_reduction.cu  10_8_shared_mem_thread_coarsening.cu  11_2_parallel_scan.cu  11_6_hierarchical_scan.cu  11_7_single_pass_hierarchical_scan.cu  12_4_co_rank_function_based_on_binary_search.cu  12_5_merge_tiled_kernel.cu  12_7_circular_buffer_merge_kernel.cu  13_3_radix_sort_iteration_kernel.cu  13_5_compare_based_parallel_merge_sort.cu  14_2_spmv_coo_kernel.cu  14_3_spmv_csr_kernel.cu  14_4_spmv_ell_kernel.cu  15_3_vertex_centric_push_BFS_kernel.cu  15_4_edge_centric_bfs_kernel.cu  15_5_bfs_kernel_frontiers.cu  16_2_cnn.cu  21_2_kernel.cu  21_3_bezier_curve_kernel_dynamic_parallelism.cu  21_3_bezier_curves.cu  21_4_quadree.cu  2_3_vec_add.cu  3_2_color_to_grey.cu  3_3_image_blur.cu  3_4_matrix_mul.cu  4_8_query.cu  5_4_tiled_matrix_multiplication_kernel.cu  6_3_matrix_multiplication_thread_coarsening.cu  7_1_2d_conv_simple.cu  7_3_conv2d_with_const_caching.cu  7_4_conv2d_tiled.cu  7_5_conv2d_tiled_with_cache_for_halo_and_const_mem.cu  8_2_basic_stencil_sweep_kernel.cu  8_4_thread_coarsening_stencil.cu  8_5_stencil_register_tiling.cu  9_1_simple_histogram.cu  9_4_privatization_histogram.cu  9_5_coarsening.cu  9_6_aggregated_histogram.cu  (+4 more)
